# Cosec

./: .gitignore  CMakeLists.txt  README.md
src/: assemble.c  assemble.h  compile.c  compile.h  cpp.c  cpp.h  debug.c  debug.h  encode.c  encode.h  err.c  err.h  error.c  error.h  file.c  file.h  lex.c  lex.h  main.c  parse.c  parse.h  pp.c  pp.h  reg_alloc.c  reg_alloc.h  type.c  type.h  util.c  util.h  validate.c  validate.h
src/parse/: debug.c  debug.h  file.c  file.h  lex.c  lex.h  parse.c  parse.h
tests/: RunTests.py
tests/arith/: add.c  bit_and.c  bit_or.c  char.c  comma.c  div.c  double_to_float.c  float.c  mod.c  order3.c  shl.c  shr.c  ull_div.c  unsigned_div.c
tests/arithmetic/: bit_xor.c  comma.c  double.c  float_to_double.c  int_div.c  mul.c  neg.c  order1.c  order2.c  paren1.c  paren2.c  signed_div.c  sub.c
tests/arrays/: alloc.c  array_as_param.c  array_as_ptr.c  designated_init.c  init.c  int_const_len.c  multi_dim.c  multi_dim_indexing1.c  multi_dim_indexing2.c  multi_dim_indexing3.c  multi_dim_indexing4.c  multi_dim_init.c  multi_dim_nested_init.c  multi_dim_unspecified_len_init.c  ptr_to_array1.c  ptr_to_array2.c  ptr_to_elem.c  ptr_to_elem2.c  set.c  set_with_ptr.c  static_init.c
tests/assignment/: add_assign.c  assign1.c  assign2.c  assign3.c  assign4.c  assign_in_expr.c  div_assign.c  mul_assign.c  multi_assign.c  post_inc_assign.c  pre_inc_assign.c  reassign.c  sub_assign.c
tests/calls/: call_ptr_to_fn.c  change_args1.c  change_args2.c  empty_call.c  float_args.c  no_ret_one_arg.c  no_ret_two_args.c  ret_no_args.c  ret_one_arg.c  ret_two_args.c
tests/comparisons/: and1.c  and2.c  and3.c  and4.c  combo1.c  combo2.c  combo3.c  combo4.c  combo5.c  combo6.c  eq.c  floats.c  lt.c  neq.c  not1.c  not2.c  not3.c  not_and.c  not_or.c  or1.c  or2.c  or3.c  ternary.c  unsigned.c
tests/functions/: add_ptr_to_fn.c  decl_fn.c  fn_with_one_arg.c  fn_with_two_args.c  ptr_to_fn.c  ptr_to_ptr_to_fn.c  two_fns.c
tests/goto/: loop.c  multiple.c  single.c
tests/if/: if.c  if_else.c  if_elseif1.c  if_elseif2.c  if_elseif3.c  if_elseif_else1.c  (+3 more)
(+56 files in other folders)
